--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+    <nav>
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+    </nav>
     <h1>Hello</h1>
 </body>
 </html>
