Add paragraph of text with larger font size

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <a href="#">Link 3</a>
     </nav>
     <h1>Hello</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit debitis, ut, velit quasi quis molestias iste est sequi necessitatibus, dolore aliquid qui explicabo tenetur. Reprehenderit, provident! Vero vitae debitis eligendi.</p>
 </body>
 </html>
