--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     </nav>
     <h1>Hello</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit debitis, ut, velit quasi quis molestias iste est sequi necessitatibus, dolore aliquid qui explicabo tenetur. Reprehenderit, provident! Vero vitae debitis eligendi.</p>
+    <footer>Copyright 2025</footer>
 </body>
 </html>
